Fixed fatal bug